# mcp-file-server

./: Dockerfile  main.py  pyproject.toml
src/mcp_file_server/: server.py
