[project]
name = "mcp-file-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click",
    "click-params>=0.5.0",
    "fastmcp>=2.12.4",
]


[project.scripts]
mcp-file-server = "mcp_file_server.server:main"

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[tool.pyright]
include = ["my_mcp_server"]
venvPath = "."
venv = ".venv"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.uv]
dev-dependencies = ["pyright>=1.1.378", "pytest>=8.3.3", "ruff>=0.6.9"]
